# JALPETSHaskell

./: .gitignore  Main.hs  README.md  ayesod.cabal  client_session_key.aes  jalpets.cabal
config/: routes
messages/: en.msg  pt-BR.msg
src/: Agendamento.hs  Animal.hs  Application.hs  Cliente.hs  Foundation.hs  Handlers.hs  Persistencia.hs  Produto.hs  Servico.hs
static/: teste.css
